...
    <string name="settings_page_security_summary">密码、生物识别、自动锁定</string>
    <string name="settings_section_appearance">外观</string>
    <string name="settings_section_data">数据</string>
    <string name="settings_section_features">功能</string>
    <string name="settings_section_other">其他</string>
    <string name="settings_section_security">安全</string>
    <string name="settings_title">设置</string>
    <string name="settings_select_item_hint">选择设置项</string>

    <!-- Appearance -->
    <string name="settings_dynamic_color">动态取色</string>
    <string name="settings_dynamic_color_description">使用壁纸配色</string>
    <string name="settings_font">字体</string>
...
